[package]
name = "monad-mpp-i"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Public Rust SDK sketch for Monad MPP-I agent-side inference payments"
repository = "https://github.com/MPP-I/Monad-MPP-I"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
